feat(download): add comprehensive download management controls
- Add download ID system for tracking individual downloads
- Add IPC handlers for download control: pause, resume, cancel, retry
- Add open-download-file handler to open downloaded files directly
- Add download filtering buttons: All, Progressing, Completed, Failed
- Include detailed download progress info: id, url, mimeType, paused state
- Handle cancelled download state properly
- Clean up download items on window close

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -141,6 +141,8 @@
         </div>
     </div>
 
+    <div id="overlay-backdrop" class="overlay-backdrop"></div>
+
     <!-- Template for New Tab Page -->
     <template id="new-tab-template">
         <div class="content">
@@ -279,6 +281,21 @@
             <h2 data-i18n="panels.downloads.title">Downloads</h2>
             <button class="close-overlay"
                 data-i18n="panels.downloads.close">Close</button>
+        </div>
+        <div class="panel-search">
+            <input type="text" id="downloads-search-input"
+                data-i18n-placeholder="panels.downloads.search"
+                placeholder="Search downloads...">
+        </div>
+        <div class="downloads-filters" id="downloads-filters">
+            <button class="downloads-filter-btn" data-filter="all"
+                data-i18n="panels.downloads.filterAll">All</button>
+            <button class="downloads-filter-btn" data-filter="progressing"
+                data-i18n="panels.downloads.filterProgressing">Downloading</button>
+            <button class="downloads-filter-btn" data-filter="completed"
+                data-i18n="panels.downloads.filterCompleted">Completed</button>
+            <button class="downloads-filter-btn" data-filter="failed"
+                data-i18n="panels.downloads.filterFailed">Failed</button>
         </div>
         <div class="panel-actions">
             <button id="downloads-clear-all-btn"
