--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -192,99 +192,147 @@
     </div>
 
     <div id="settings-panel" class="overlay-panel" role="dialog" aria-labelledby="settings-panel-title" aria-modal="true">
-        <div class="overlay-header">
-            <h2 id="settings-panel-title" data-i18n="panels.settings.title">Browser Settings</h2>
+        <div class="settings-header">
+            <h2 id="settings-panel-title" data-i18n="panels.settings.title">设置</h2>
             <button class="close-overlay icon-btn" data-i18n-title="panels.settings.close" role="button" aria-label="关闭设置面板">
-                <svg viewBox="0 0 24 24" width="24" height="24" role="img" aria-hidden="true">
+                <svg viewBox="0 0 24 24" width="18" height="18" role="img" aria-hidden="true">
                     <path fill="currentColor" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"/>
                 </svg>
             </button>
         </div>
-        <div class="settings-content">
-            <div class="setting-item">
-                <label data-i18n="panels.settings.searchEngine">
-                    Default Search Engine
-                </label>
-                <select id="search-engine-select">
-                    <option value="bing">Bing</option>
-                    <option value="google">Google</option>
-                    <option value="baidu">Baidu</option>
-                </select>
-            </div>
-            <div class="setting-item">
-                <label data-i18n="panels.settings.startupPage">Startup Page</label>
-                <input type="text" id="startup-url-input"
-                    data-i18n-placeholder="panels.settings.startupPagePlaceholder"
-                    placeholder="Enter URL or leave blank for new tab">
-            </div>
-            <div class="setting-item">
-                <label data-i18n="panels.settings.incognito">
-                    Incognito Mode
-                </label>
-                <button id="incognito-toggle-btn"
-                    style="padding: 6px 12px; cursor: pointer;"
-                    data-i18n="panels.settings.incognitoToggle">
-                    Toggle Incognito Mode
+        <div class="settings-body">
+            <div class="settings-sidebar">
+                <button class="settings-nav-item active" data-section="appearance">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M12,3A9,9 0 0,0 3,12A9,9 0 0,0 12,21A9,9 0 0,0 21,12A9,9 0 0,0 12,3M12,19A7,7 0 0,1 5,12A7,7 0 0,1 12,5A7,7 0 0,1 19,12A7,7 0 0,1 12,19Z"/></svg>
+                    <span>外观</span>
+                </button>
+                <button class="settings-nav-item" data-section="search">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"/></svg>
+                    <span>搜索</span>
+                </button>
+                <button class="settings-nav-item" data-section="startup">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4M12,6A6,6 0 0,0 6,12A6,6 0 0,0 12,18A6,6 0 0,0 18,12A6,6 0 0,0 12,6Z"/></svg>
+                    <span>启动</span>
+                </button>
+                <button class="settings-nav-item" data-section="language">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M12.87,15.07L10.33,12.56L10.36,12.53C12.1,10.59 13.34,8.36 14.07,6H17V4H10V2H8V4H1V5.99H12.17C11.5,7.92 10.44,9.75 9,11.35C8.07,10.32 7.3,9.19 6.69,8H4.69C5.42,9.63 6.42,11.17 7.67,12.56L2.58,17.58L4,19L9,14L12.11,17.11L12.87,15.07M18.5,10H16.5L12,22H14L15.12,19H19.87L21,22H23L18.5,10M15.88,17L17.5,12.67L19.12,17H15.88Z"/></svg>
+                    <span>语言</span>
+                </button>
+                <button class="settings-nav-item" data-section="privacy">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M17.13,17C15.92,18.85 14.11,20.24 12,20.92C9.89,20.24 8.08,18.85 6.87,17C6.53,16.5 6.24,16 6,15.47C6,13.82 8.71,12.47 12,12.47C15.29,12.47 18,13.79 18,15.47C17.76,16 17.47,16.5 17.13,17Z"/></svg>
+                    <span>隐私</span>
+                </button>
+                <button class="settings-nav-item" data-section="data">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"/></svg>
+                    <span>数据</span>
                 </button>
             </div>
-            <div class="setting-item">
-                <label data-i18n="panels.settings.darkMode">Dark Mode</label>
-                <button id="dark-mode-btn"
-                    style="padding: 6px 12px; cursor: pointer;"
-                    data-i18n="panels.settings.darkModeToggle">
-                    Toggle Dark/Light Mode
-                </button>
-            </div>
-            <div class="setting-item">
-                <label data-i18n="panels.settings.zoom">Zoom Level</label>
-                <div style="display: flex; gap: 8px; align-items: center;">
-                    <button id="zoom-out-btn" class="zoom-btn" data-i18n-title="zoom.out" aria-label="缩小">
-                        <svg viewBox="0 0 24 24" width="24" height="24" role="img" aria-hidden="true">
-                            <path fill="currentColor" d="M19,13H5V11H19V13Z"/>
-                        </svg>
-                    </button>
-                    <span id="zoom-level-text">100%</span>
-                    <button id="zoom-in-btn" class="zoom-btn" data-i18n-title="zoom.in" aria-label="放大">
-                        <svg viewBox="0 0 24 24" width="24" height="24" role="img" aria-hidden="true">
-                            <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"/>
-                        </svg>
-                    </button>
-                    <button id="zoom-reset-btn" class="zoom-btn" data-i18n-title="zoom.reset" aria-label="重置缩放">
-                        <svg viewBox="0 0 24 24" width="24" height="24" role="img" aria-hidden="true">
-                            <path fill="currentColor" d="M17.65,6.35C16.2,4.9,14.21,4,12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"/>
-                        </svg>
-                    </button>
+            <div class="settings-content">
+                <!-- 外观设置 -->
+                <div id="settings-appearance" class="settings-section active">
+                    <h3>外观设置</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>深色模式</label>
+                            <div class="setting-desc">启用深色主题以减少眼睛疲劳</div>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="dark-mode-toggle">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>页面缩放</label>
+                            <div class="setting-desc">调整网页内容的显示大小</div>
+                        </div>
+                        <div class="zoom-controls">
+                            <button class="setting-action-btn" id="zoom-out-btn">-</button>
+                            <span id="zoom-level-text">100%</span>
+                            <button class="setting-action-btn" id="zoom-in-btn">+</button>
+                            <button class="setting-action-btn" id="zoom-reset-btn">重置</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="setting-item">
-                <label data-i18n="panels.settings.restoreSession">
-                    Restore Session
-                </label>
-                <label class="toggle-switch">
-                    <input type="checkbox" id="restore-session-toggle">
-                    <span class="toggle-slider"></span>
-                </label>
-            </div>
-            <div class="setting-item">
-                <label data-i18n="panels.settings.language">
-                    Interface Language
-                </label>
-                <select id="lang-select">
-                    <option value="zh-CN">简体中文</option>
-                    <option value="en-US">English</option>
-                </select>
-            </div>
-            <div class="setting-item">
-                <button id="export-data-btn"
-                    style="background:#4285f4; color:white; border:none; padding:8px 16px; border-radius:4px; cursor:pointer;"
-                    data-i18n="panels.settings.exportData">
-                    Export Browser Data (JSON)
-                </button>
-                <button id="clear-data-btn"
-                    style="background:#ff4444; color:white; border:none; padding:8px 16px; border-radius:4px; cursor:pointer;"
-                    data-i18n="panels.settings.clearData">
-                    Clear Browser Data (History/Bookmarks)
-                </button>
+                <!-- 搜索设置 -->
+                <div id="settings-search" class="settings-section">
+                    <h3>搜索设置</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>默认搜索引擎</label>
+                            <div class="setting-desc">选择地址栏和搜索框使用的搜索引擎</div>
+                        </div>
+                        <select id="search-engine-select">
+                            <option value="bing">Bing</option>
+                            <option value="google">Google</option>
+                            <option value="baidu">百度</option>
+                        </select>
+                    </div>
+                </div>
+                <!-- 启动设置 -->
+                <div id="settings-startup" class="settings-section">
+                    <h3>启动设置</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>启动页面</label>
+                            <div class="setting-desc">浏览器启动时打开的页面</div>
+                        </div>
+                        <input type="text" id="startup-url-input" placeholder="留空则显示新标签页">
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>恢复上次会话</label>
+                            <div class="setting-desc">启动时自动恢复上次关闭时的标签页</div>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="restore-session-toggle">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+                </div>
+                <!-- 语言设置 -->
+                <div id="settings-language" class="settings-section">
+                    <h3>语言设置</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>界面语言</label>
+                            <div class="setting-desc">选择浏览器界面的显示语言</div>
+                        </div>
+                        <select id="lang-select">
+                            <option value="zh-CN">简体中文</option>
+                            <option value="en-US">English</option>
+                        </select>
+                    </div>
+                </div>
+                <!-- 隐私设置 -->
+                <div id="settings-privacy" class="settings-section">
+                    <h3>隐私设置</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>隐身模式</label>
+                            <div class="setting-desc">以隐身模式浏览，不保存历史记录</div>
+                        </div>
+                        <button id="incognito-toggle-btn" class="setting-action-btn">开启隐身模式</button>
+                    </div>
+                </div>
+                <!-- 数据设置 -->
+                <div id="settings-data" class="settings-section">
+                    <h3>数据管理</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>导出浏览器数据</label>
+                            <div class="setting-desc">将书签、历史记录等数据导出为JSON文件</div>
+                        </div>
+                        <button id="export-data-btn" class="setting-action-btn primary">导出数据</button>
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label>清除浏览器数据</label>
+                            <div class="setting-desc">清除历史记录、书签等所有数据</div>
+                        </div>
+                        <button id="clear-data-btn" class="setting-action-btn danger">清除数据</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
