feat(downloads): add confirmation dialog for clearing all downloads
- Add modal dialog HTML structure for confirmation dialogs
- Add confirmation dialog when clearing all downloads using modalManager
- Improve user experience with confirmation before destructive actions

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -537,6 +537,16 @@
     <!-- Toast 通知容器 -->
     <div id="toast-container" role="alert" aria-live="polite"></div>
 
+    <!-- 自定义模态框 -->
+    <div id="modal-overlay" class="modal-overlay" role="dialog" aria-modal="true">
+        <div class="modal-container">
+            <div class="modal-icon" id="modal-icon"></div>
+            <div class="modal-title" id="modal-title"></div>
+            <div class="modal-message" id="modal-message"></div>
+            <div class="modal-buttons" id="modal-buttons"></div>
+        </div>
+    </div>
+
     <script src="renderer.js"></script>
 </body>
 </html>
