--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -243,6 +243,11 @@
                     <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"/></svg>
                     <span>数据</span>
                 </button>
+                <button class="settings-nav-item" data-section="extensions">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M19,6H17V4C17,2.9 16.1,2 15,2C13.9,2 13,2.9 13,4V6H11V4C11,2.9 10.1,2 9,2C7.9,2 7,2.9 7,4V6H5C3.9,6 3,6.9 3,8V11H5C6.1,11 7,11.9 7,13C7,14.1 6.1,15 5,15H3V18C3,19.1 3.9,20 5,20H7V18C7,16.9 7.9,16 9,16C10.1,16 11,16.9 11,18V20H13V18C13,16.9 13.9,16 15,16C16.1,16 17,16.9 17,18V20H19C20.1,20 21,19.1 21,18V15H19C17.9,15 17,14.1 17,13C17,11.9 17.9,11 19,11H21V8C21,6.9 20.1,6 19,6Z"/></svg>
+                    <span>扩展</span>
+                    <span class="beta-badge" data-tooltip="当前为测试版，无法保证可用性">BETA</span>
+                </button>
                 <button class="settings-nav-item" data-section="about">
                     <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/></svg>
                     <span>关于</span>
@@ -353,6 +358,20 @@
                         </div>
                         <button id="clear-data-btn" class="setting-action-btn danger">清除数据</button>
                     </div>
+                </div>
+                <!-- 扩展管理 -->
+                <div id="settings-extensions" class="settings-section">
+                    <h3 class="section-title-with-badge">
+                        扩展管理
+                        <span class="beta-badge" data-tooltip="当前为测试版，无法保证可用性">BETA</span>
+                    </h3>
+                    <div class="extensions-actions">
+                        <button id="extensions-add-btn" class="setting-action-btn primary">添加扩展</button>
+                        <button id="extensions-refresh-btn" class="setting-action-btn">刷新</button>
+                    </div>
+                    <div id="extensions-empty" class="extensions-empty">暂未添加扩展</div>
+                    <div id="extensions-list" class="extensions-list" role="list" aria-label="扩展列表"></div>
+                    <div class="extensions-hint">提示：请选择包含 manifest.json 的扩展目录</div>
                 </div>
                 <!-- 关于 -->
                 <div id="settings-about" class="settings-section">
