--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -16,6 +16,12 @@
         <div class="progress-container" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar" id="progress-bar"></div>
         </div>
+        <button id="translate-toggle-btn" title="翻译开关" role="button" aria-label="翻译开关">
+            <svg viewBox="0 0 24 24" width="24" height="24" role="img" aria-hidden="true">
+                <path fill="currentColor" d="M4,5H11V7H7.74L9.93,9.19C10.5,8.41 10.96,7.57 11.31,6.69L13.16,7.46C12.71,8.58 12.12,9.64 11.39,10.61L12.75,11.97L11.34,13.38L10,12.04L8.66,13.38L7.25,11.97L8.61,10.61C7.52,9.16 6.68,7.57 6.08,5.86L7.97,5.2C8.42,6.49 9.05,7.71 9.86,8.82L11,7.68V5H4V3M15,11L12,19H14.25L14.88,17H19.12L19.75,19H22L19,11H15M15.5,15L17,10.5L18.5,15H15.5Z"/>
+            </svg>
+            <span class="translate-check" aria-hidden="true">✓</span>
+        </button>
         <button id="back-btn" data-i18n="toolbar.back"
             data-i18n-title="title.back" role="button" aria-label="后退">
             <svg viewBox="0 0 24 24" width="24" height="24" role="img" aria-hidden="true">
@@ -235,6 +241,10 @@
                     <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M12.87,15.07L10.33,12.56L10.36,12.53C12.1,10.59 13.34,8.36 14.07,6H17V4H10V2H8V4H1V5.99H12.17C11.5,7.92 10.44,9.75 9,11.35C8.07,10.32 7.3,9.19 6.69,8H4.69C5.42,9.63 6.42,11.17 7.67,12.56L2.58,17.58L4,19L9,14L12.11,17.11L12.87,15.07M18.5,10H16.5L12,22H14L15.12,19H19.87L21,22H23L18.5,10M15.88,17L17.5,12.67L19.12,17H15.88Z"/></svg>
                     <span>语言</span>
                 </button>
+                <button class="settings-nav-item" data-section="translation">
+                    <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M4,5H11V7H7.74L9.93,9.19C10.5,8.41 10.96,7.57 11.31,6.69L13.16,7.46C12.71,8.58 12.12,9.64 11.39,10.61L12.75,11.97L11.34,13.38L10,12.04L8.66,13.38L7.25,11.97L8.61,10.61C7.52,9.16 6.68,7.57 6.08,5.86L7.97,5.2C8.42,6.49 9.05,7.71 9.86,8.82L11,7.68V5H4V3M15,11L12,19H14.25L14.88,17H19.12L19.75,19H22L19,11H15M15.5,15L17,10.5L18.5,15H15.5Z"/></svg>
+                    <span>翻译</span>
+                </button>
                 <button class="settings-nav-item" data-section="privacy">
                     <svg viewBox="0 0 24 24" width="18" height="18"><path fill="currentColor" d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M17.13,17C15.92,18.85 14.11,20.24 12,20.92C9.89,20.24 8.08,18.85 6.87,17C6.53,16.5 6.24,16 6,15.47C6,13.82 8.71,12.47 12,12.47C15.29,12.47 18,13.79 18,15.47C17.76,16 17.47,16.5 17.13,17Z"/></svg>
                     <span>隐私</span>
@@ -322,11 +332,11 @@
                 </div>
                 <!-- 语言设置 -->
                 <div id="settings-language" class="settings-section">
-                    <h3>语言设置</h3>
+                    <h3 data-i18n="panels.settings.language">界面语言</h3>
                     <div class="setting-item">
                         <div class="setting-info">
-                            <label>界面语言</label>
-                            <div class="setting-desc">选择浏览器界面的显示语言</div>
+                            <label data-i18n="panels.settings.language">界面语言</label>
+                            <div class="setting-desc" data-i18n="panels.settings.languageDesc">选择浏览器界面的显示语言</div>
                         </div>
                         <select id="lang-select">
                             <option value="zh-CN">简体中文</option>
@@ -334,7 +344,98 @@
                         </select>
                     </div>
                 </div>
-                <!-- 隐私设置 -->
+                <!-- 翻译设置 -->
+                <div id="settings-translation" class="settings-section">
+                    <h3 data-i18n="panels.settings.translation.title">翻译设置</h3>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label data-i18n="panels.settings.translation.autoTranslate">自动翻译页面</label>
+                            <div class="setting-desc" data-i18n="panels.settings.translation.autoTranslateDesc">页面加载完成后自动翻译</div>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="translate-enable-toggle">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label data-i18n="panels.settings.translation.engine">翻译引擎</label>
+                            <div class="setting-desc" data-i18n="panels.settings.translation.engineDesc">选择翻译引擎</div>
+                        </div>
+                        <select id="translate-engine-select">
+                            <option value="bing" data-i18n="panels.settings.translation.engineBing">微软翻译 (免费)</option>
+                            <option value="ai" data-i18n="panels.settings.translation.engineAI">AI翻译</option>
+                        </select>
+                    </div>
+                    <!-- AI翻译配置 -->
+                    <div id="ai-translation-config" style="display: none;">
+                        <div class="setting-item">
+                            <div class="setting-info">
+                                <label data-i18n="panels.settings.translation.aiEndpoint">API端点URL</label>
+                                <div class="setting-desc" data-i18n="panels.settings.translation.aiEndpointDesc">AI翻译API的基础URL地址</div>
+                            </div>
+                            <input type="text" id="translate-ai-endpoint-input" placeholder="https://api.openai.com/v1">
+                        </div>
+                        <div class="setting-item">
+                            <div class="setting-info">
+                                <label data-i18n="panels.settings.translation.aiApiKey">API密钥</label>
+                                <div class="setting-desc" data-i18n="panels.settings.translation.aiApiKeyDesc">您的API访问密钥</div>
+                            </div>
+                            <input type="password" id="translate-ai-api-key-input" placeholder="sk-...">
+                        </div>
+                        <div class="setting-item">
+                            <div class="setting-info">
+                                <label data-i18n="panels.settings.translation.aiRequestType">请求方式</label>
+                                <div class="setting-desc" data-i18n="panels.settings.translation.aiRequestTypeDesc">选择API的请求格式类型</div>
+                            </div>
+                            <select id="translate-ai-request-type-select">
+                                <option value="openai-chat" data-i18n="panels.settings.translation.aiOpenaiChat">OpenAI Chat 兼容</option>
+                                <option value="openai-response" data-i18n="panels.settings.translation.aiOpenaiResponse">OpenAI Response</option>
+                                <option value="anthropic" data-i18n="panels.settings.translation.aiAnthropic">Anthropic</option>
+                            </select>
+                        </div>
+                        <div class="setting-item">
+                            <div class="setting-info">
+                                <label data-i18n="panels.settings.translation.aiModel">模型ID</label>
+                                <div class="setting-desc" data-i18n="panels.settings.translation.aiModelDesc">指定要使用的AI模型</div>
+                            </div>
+                            <input type="text" id="translate-ai-model-input" placeholder="gpt-3.5-turbo">
+                        </div>
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label data-i18n="panels.settings.translation.targetLanguage">目标语言</label>
+                            <div class="setting-desc" data-i18n="panels.settings.translation.targetLanguageDesc">选择翻译后的语言</div>
+                        </div>
+                        <select id="translate-target-lang-select">
+                            <option value="zh-Hans">中文 (简体)</option>
+                            <option value="en">English</option>
+                            <option value="ja">日本語</option>
+                            <option value="ko">한국어</option>
+                            <option value="fr">Français</option>
+                            <option value="de">Deutsch</option>
+                            <option value="es">Español</option>
+                            <option value="ru">Русский</option>
+                        </select>
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label data-i18n="panels.settings.translation.displayMode">显示模式</label>
+                            <div class="setting-desc" data-i18n="panels.settings.translation.displayModeDesc">双语模式在原文上方显示翻译</div>
+                        </div>
+                        <select id="translate-display-mode-select">
+                            <option value="bilingual" data-i18n="panels.settings.translation.modeBilingual">双语显示</option>
+                            <option value="replace" data-i18n="panels.settings.translation.modeReplace">替换原文</option>
+                        </select>
+                    </div>
+                    <div class="setting-item">
+                        <div class="setting-info">
+                            <label data-i18n="panels.settings.translation.translateNow">翻译当前标签页</label>
+                            <div class="setting-desc" data-i18n="panels.settings.translation.translateNowDesc">立即翻译当前页面</div>
+                        </div>
+                        <button id="translate-current-page-btn" class="setting-action-btn primary" data-i18n="panels.settings.translation.translateNowBtn">立即翻译</button>
+                    </div>
+                </div>
                 <div id="settings-privacy" class="settings-section">
                     <h3>隐私设置</h3>
                     <div class="setting-item">
@@ -365,7 +466,7 @@
                 </div>
                 <!-- AI设置 -->
                 <div id="settings-ai" class="settings-section">
-                    <h3>AI设置</h3>
+                    <h3 data-i18n="panels.settings.ai.title">AI设置</h3>
                     <div class="setting-item">
                         <div class="setting-info">
                             <label data-i18n="panels.settings.ai.endpoint">API端点URL</label>
